Update tests and UI to make it more user friendly